vlib/v/checker/tests/generics_struct_decl_no_mention_err.vv
fn main() {}

struct Foo<U> {
	Bar<T>
	foo U
	bar P
}

struct Bar<T> {
}
